# IoT-Edge-Analytics

./: .gitignore  ReadMe.md
backend_django/: requirements.txt
backend_django/devices/: admin.py  models.py  serializers.py  tasks.py  views.py
backend_django/devices/migrations/: 0001_initial.py  0002_telemetry_processed.py
backend_django/visiontrack/: __init__.py  celery.py  settings.py  urls.py
ingestion_rust/: Cargo.toml
ingestion_rust/src/: aggregator.rs  gstreamer.rs  main.rs  models.rs  queue.rs  routes.rs
worker/: worker.py
